--- a/src/main/resources/templates/loginSuccess.html
+++ b/src/main/resources/templates/loginSuccess.html
@@ -10,6 +10,7 @@
 <h3>
     <div class="label label-info">
         Welcome, <span th:text="${name}">user</span>!
+        (email: <span th:text="${email}">email</span>)
     </div>
 </h3>
 </body>
